--- a/main.html
+++ b/main.html
@@ -6,7 +6,11 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="holder">
+
+<div class="item">item1</div>
+
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
